--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cordova-android": "^8.0.0",
     "cordova-plugin-x-toast": "^2.7.2",
     "cordova-sqlite-storage": "^3.2.1",
+    "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "materialize-css": "^1.0.0-rc.2"
   },
